Reduced the specular highlight on the charges