@@ -1,1 +1,2 @@
+Added black to the left of the screen to match the black region to the right of the wall
 Reduced the specular highlight on the charges
